security-intro/manifests/mtls-frontend.yaml
# [START istio_security_intro_manifests_destinationrule_frontend]
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
# [END istio_security_intro_manifests_destinationrule_frontend]
---
