security-intro/manifests/authz-frontend.yaml

# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_security_intro_manifests_authorizationpolicy_frontend]
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend
  namespace: default
spec:
  rules:
  - from:
    - source:
        principals:
        - '*'
    to:
    - operation:
        methods:
        - GET
        paths:
        - /*
    when:
    - key: request.headers[hello]
      values:
      - world
  selector:
    matchLabels:
      app: frontend
# [END istio_security_intro_manifests_authorizationpolicy_frontend]
---
